# black_scholes_distributed

./: .gitignore  README.md  range_pricer.conf
cpp/: CMakeLists.txt
cpp/include/: config.h  logger.h  range_pricer.h  worker.h
cpp/src/: client.cpp  config.cpp  logger.cpp  main.cpp  range_pricer.cpp  worker.cpp
cpp/test/: range_pricer_test.cpp
python/: range_pricer.ipynb  range_pricer_client.py  requirements.txt
schemas/: README.md  pricing_request.fbs
